--- a/less/home-page.less
+++ b/less/home-page.less
@@ -148,6 +148,7 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      text-align: center;
 
       @media @mobile{
         width: 100%;
